# Fluent-QML

./: .git-cliff.toml  .gitignore  LICENSE  MANIFEST.in  README.md  hatch_build.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  python-publish.yml
RinUI/: __init__.py  rinui.qrc  rinui.qrc.sha256
RinUI/core/: config.py  launcher.py  theme.py  translator.py
RinUI/hooks/: hook-RinUI.py
RinUI/windows/: FluentWindowBase.qml  TitleBar.qml
RinUI/windows/window/: Window.qml
docs/: ControlAcrylicPlan.md  README_zhCN.MD  ToDo.MD
examples/: config.py  gallery.py  gallery.qml  gallery.qrc  gallery.qrc.sha256
examples/assets/: ItemData.qml  gallery.icns
examples/components/: ControlClip.qml  ControlPage.qml  ControlShowcase.qml  LinkClip.qml  SamplePage.qml
examples/languages/: en_US.ts  zh_CN.qm  zh_CN.ts
examples/pages/: AllSamples.qml  BasicInput.qml  Collections.qml  DateAndTime.qml  DialogsAndFlyouts.qml  Home.qml  Iconography.qml  Layout.qml  Media.qml  MenusAndToolbars.qml  Navigation.qml  Search.qml  Settings.qml  StatusAndInfo.qml  Text.qml
examples/pages/controls/: Acrylic.qml  AutoSuggestBox.qml  Avatar.qml  BreadcrumbBar.qml  Button.qml  CalendarDatePicker.qml  CalendarView.qml  CheckBox.qml  ColorPicker.qml  ComboBox.qml  CommandBar.qml  DatePicker.qml  Dialog.qml  Expander.qml  (+31 more)
examples/scripts/: build_gallery_qrc.py
fluentqml/: __init__.py  fluentqml.qrc  fluentqml.qrc.sha256  qmldir
fluentqml/components/: qmldir
fluentqml/core/: __init__.py  acrylic.py  config.py  launcher.py  theme.py  translator.py  window.py
fluentqml/hooks/: hook-fluentqml.py
fluentqml/themes/: qmldir  theme.qml  utils.qml
fluentqml/windows/: FluentPage.qml  FluentWindowBase.qml  TitleBar.qml  qmldir
scripts/: build_fluentqml_qrc.py  build_rinui_qrc.py  package_gallery.bat  package_gallery.py  package_gallery_nuitka.py  release.py  update_ts.bat  update_ts.py
test/: main.py  test1.qml  test2.qml  test3.qml
(+44 files in other folders)
