[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluentqml"
license = { file = "LICENSE" }
dynamic = ["version"]
authors = [
  {name = "Cheukfung"}
]
description = "A Fluent Design-like UI library for Qt Quick (QML) based on PySide6"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PySide6>=6.9.3",
  "darkdetect~=0.8.0",
  "pyobjc-framework-Cocoa ; sys_platform == 'darwin'",
  "pywin32 ; sys_platform == 'win32'"
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]

[tool.hatch.build.targets.wheel]
packages = ["fluentqml"]
exclude = [
  "fluentqml/**/*.qml",
  "fluentqml/**/qmldir",
  "fluentqml/**/*.qm",
  "fluentqml/**/*.ts",
  "fluentqml/assets/**",
  "fluentqml/fluentqml.qrc",
  "fluentqml/fluentqml.qrc.sha256"
]

[tool.hatch.build.hooks.custom]
dependencies = ["PySide6>=6.9.3"]

[tool.hatch.build.targets.wheel.force-include]
"LICENSE" = "LICENSE"
"README.md" = "README.md"

[tool.hatch.version]
path = "fluentqml/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "fluentqml/**/*",
  "LICENSE",
  "README.md"
]

[project.entry-points."pyinstaller40"]
hook-dirs = "fluentqml.hooks:get_hook_dirs"

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0.0",
  "ruff>=0.14.0"
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
ignore = [
  "ARG002",
  "B008",
  "C901",
  "E501",
  "F841",
  "N801",
  "N802",
  "N815",
  "N999",
  "PLR0912",
  "PLR0913",
  "PLR0915"
]
select = [
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PIE",
  "PTH",
  "RET",
  "SIM",
  "TRY",
  "UP",
  "W"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["B011"]
